--- a/index.html
+++ b/index.html
@@ -45,16 +45,28 @@
                                 <i class="fa-solid fa-magnifying-glass" style="color: #d7d1d2;"></i>
                                 <span>Axtarış</span>
                             </div>
-                            <div id="help" class="d-flex justify-content-between d-none ">
-                                <textarea name="" class="w-100 h-75  fs-18 border-0 bg-transparent color-9f9f9f" id=""
-                                    cols="30" rows="10" placeholder="Sizə necə kömək edə bilərik?"></textarea>
+                            <div id="help">
+                                <textarea name="" placeholder="Sizə necə kömək edə bilərik?"></textarea>
 
-                                <i class="fa-solid fa-xmark" style="color: #d7d1d2;"></i>
+                                <i id="icon" class="fa-solid fa-xmark" style="color: #d7d1d2;"></i>
                             </div>
                         </div>
-                        <div class="col-lg-4">
+                        <div class=" select-lang col-lg-4">
                             <span>AZ</span>
-                            <i class="fa-solid fa-angle-down" style="color: #d7d1d2;"></i>
+                            <i id="transform" class="fa-solid fa-angle-down" style="color: #d7d1d2;"></i>
+                        </div>
+
+                        <div id="language">
+                            <div class="RU d-flex">
+                                <img src="./assets/style/image/flag-ru.svg" alt="">
+                                <span>RU</span>
+                            </div>
+
+                            <div class="UK d-flex">
+                                <img src="./assets/style/image/flag-uk.svg" alt="">
+                                <span>UK</span>
+                            </div>
+
                         </div>
                         <div class="col-lg-4">
                             <i class="fa-sharp fa-solid fa-phone" style="color: #d7d1d2;"></i>
